--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "@nuxtjs/i18n": "^7.3.1",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
